--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.data.jpa.repository.packages=ru.kata.spring.boot_security.demo.dao
 spring.data.jpa.entity.packages-to-scan=ru.kata.spring.boot_security.demo.entity
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/my_db?serverTimezone=Europe/Moscow
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show_sql=true
